testsuite/tests/rename/should_fail/rnfail051.stderr
rnfail051.hs:11:17: error: [GHC-31244]
    Unexpected type syntax in the expression
    Suggested fix:
      Perhaps you intended to use the ‘RequiredTypeArguments’ extension

